--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
+        "nesbot/carbon": "^2.72",
         "realrashid/sweet-alert": "^7.2"
     },
     "require-dev": {
